--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <h5>Drug Traceability</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="xxx"><img src="img/Flipkart.png"></a></div>
+                <div class="picture"><a href="https://vennela-mekarthi.github.io/OnlineFlipkart.github.io/"><img src="img/Flipkart.png"></a></div>
                 <h5>Flipkart</h5>
             </div>
             <div class="container4">
