--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 </span><ul class="sec-texts"><li><span>Vennela</span></li><li><span>Software Developer</span></li></ul></div>
         </h3>
         <div class="buttons">
-        <button ><a href="https://wa.me/xxxxxx">CONTACT ME</a></button>
-        <button><a href="xxxx">DOWNLOAD CV</a></button></div>
+        <button ><a href="https://wa.me/919347903832">CONTACT ME</a></button>
+        <button><a href="https://drive.google.com/file/d/1mURTBPjhI47Sy9NIOULDII_yOOQQEdvl/view?usp=sharing">DOWNLOAD CV</a></button></div>
             <div class="social-menu">
                 <ul>
-                    <li><a href="xxx" target="blank"><i class="fab fa-github"></i></i></a></li>
-                    <li><a href="xxx" target="blank"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="xxx" target="blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="https://github.com/vennela-Mekarthi" target="blank"><i class="fab fa-github"></i></i></a></li>
+                    <li><a href="https://www.instagram.com/baby_patel_1009" target="blank"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/vennela-mekarthi" target="blank"><i class="fab fa-linkedin-in"></i></a></li>
                     
                 </ul>
             
@@ -144,35 +144,35 @@
             <h1>MY PROJECTS</h1>
             <div class="project">
             <div class="container4">
-                <div class="picture"><a href="xxx"><img src="img/Blockchain.png"></a></div>
+                <div class="picture"><a href="file:///D:/GIT1/Assignment/calc/calc.html"><img src="img/Blockchain.png"></a></div>
                 <h5>Drug Traceability</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="https://vennela-mekarthi.github.io/OnlineFlipkart.github.io/"><img src="img/Flipkart.png"></a></div>
+                <div class="picture"><a href="http://localhost:2023/2067-Source%20Code/index.html"><img src="img/Flipkart.png"></a></div>
                 <h5>Flipkart</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="xxx"><img src="img/Healthmonitoring.png"></a></div>
+                <div class="picture"><a href="https://divya1311-del.github.io/Divya.github.io/"><img src="img/Healthmonitoring.png"></a></div>
                 <h5>Health Monitoring</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="xxx"><img src="img/menucard.png"></a></div>
+                <div class="picture"><a href="https://avocadoo12122.z13.web.core.windows.net/"><img src="img/menucard.png"></a></div>
                 <h5>Menucard</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="xxx"><img src="img/To-Do List.png"></a></div>
+                <div class="picture"><a href="https://avocadoo12122.z13.web.core.windows.net/"><img src="img/To-Do List.png"></a></div>
                 <h5>To-Do List</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="xxx"><img src="img/BookTickets.png"></a></div>
+                <div class="picture"><a href="https://avocadoo12122.z13.web.core.windows.net/"><img src="img/BookTickets.png"></a></div>
                 <h5>Booking Tickets</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="xxx"><img src="img/calculator.png"></a></div>
+                <div class="picture"><a href="https://avocadoo12122.z13.web.core.windows.net/"><img src="img/calculator.png"></a></div>
                 <h5>Calculator</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="xxx"><img src="img/solar.png"></a></div>
+                <div class="picture"><a href="https://avocadoo12122.z13.web.core.windows.net/"><img src="img/solar.png"></a></div>
                 <h5>Solar Model</h5>
             </div>
             </div>
