--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <h5>Drug Traceability</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="http://localhost:2023/2067-Source%20Code/index.html"><img src="img/Flipkart.png"></a></div>
+                <div class="picture"><a href="https://github.com/Vennela-Mekarthi/OnlineFlipkart.github.io"><img src="img/Flipkart.png"></a></div>
                 <h5>Flipkart</h5>
             </div>
             <div class="container4">
@@ -164,7 +164,7 @@
                 <h5>To-Do List</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="https://avocadoo12122.z13.web.core.windows.net/"><img src="img/BookTickets.png"></a></div>
+                <div class="picture"><a href="https://github.com/Vennela-Mekarthi/BookTicket.github.io"><img src="img/BookTickets.png"></a></div>
                 <h5>Booking Tickets</h5>
             </div>
             <div class="container4">
