--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <h5>To-Do List</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="https://github.com/Vennela-Mekarthi/BookTicket.github.io"><img src="img/BookTickets.png"></a></div>
+                <div class="picture"><a href="https://vennela-mekarthi.github.io/BookTicket.github.io/"><img src="img/BookTickets.png"></a></div>
                 <h5>Booking Tickets</h5>
             </div>
             <div class="container4">
