--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <h5>Drug Traceability</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="https://github.com/Vennela-Mekarthi/OnlineFlipkart.github.io"><img src="img/Flipkart.png"></a></div>
+                <div class="picture"><a href="https://vennela-mekarthi.github.io/OnlineFlipkart.github.io/"><img src="img/Flipkart.png"></a></div>
                 <h5>Flipkart</h5>
             </div>
             <div class="container4">
@@ -156,7 +156,7 @@
                 <h5>Health Monitoring</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="https://avocadoo12122.z13.web.core.windows.net/"><img src="img/menucard.png"></a></div>
+                <div class="picture"><a href="https://vennela-mekarthi.github.io/Hotelmenu.github.io/"><img src="img/menucard.png"></a></div>
                 <h5>Menucard</h5>
             </div>
             <div class="container4">
