--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <h5>Booking Tickets</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="https://avocadoo12122.z13.web.core.windows.net/"><img src="img/calculator.png"></a></div>
+                <div class="picture"><a href="https://github.com/Vennela-Mekarthi/calculator.github.io"><img src="img/calculator.png"></a></div>
                 <h5>Calculator</h5>
             </div>
             <div class="container4">
