--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <h5>Menucard</h5>
             </div>
             <div class="container4">
-                <div class="picture"><a href="https://avocadoo12122.z13.web.core.windows.net/"><img src="img/To-Do List.png"></a></div>
+                <div class="picture"><a href="https://vennela-mekarthi.github.io/ToDoList.github.io/"><img src="img/To-Do List.png"></a></div>
                 <h5>To-Do List</h5>
             </div>
             <div class="container4">
